1.4.4 - [REALESEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed #16035: DatabaseSchema component automatically sorts table fields
  alphabetically
- Fixed #15894: ezcDbSchemaIndex sorts fields by name, but field order is
  important in indexes!
- Fixed #15892: XML Storage for Schema casts Integer defaults to string and
  detects field change wrong
- Fixed #15895: Setting an Index Primary should enforce Unique
- Fixed: Handling of not null in SQLite


1.4.3 - Monday 07 December 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #15612: DbSchema does not obey Max Ident Length of 30 constraint
  for AutoIncrement Simulation. (Patch by Benjamin Eberlei)


1.4.2 - Monday 05 January 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added missing support for the MySQL bit datatype.


1.4.1 - Monday 01 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #13460: Documentation issues.


1.4 - Monday 16 June 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.4rc1 - Tuesday 10 June 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #12937: PersistentObject definition writer now creates correct
  PHP type definition for non-number primary keys.
- Fixed issue #13072: SQLite schema reader does not work with uppercase type
  names.


1.4beta1 - Tuesday 27 May 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Changed the class name ezcDbSchemaNonUniqueIndexNameValidator to
  ezcDbSchemaUniqueIndexNameValidator.
- Changed ezcDbSchemaDbReader back to an interface, and created a common SQL
  reader class that implements the common methods.
- Moved ezcDbSchema*Reader/getReaderType() to the new common SQL reader class
  ezcDbSchemaCommonSqlReader.